<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inst_Attention_Fragment"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/easy_level"
            android:textColor="@color/red"
            android:gravity="center"
            android:textSize="35dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/attentionEasy"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:layout_marginTop="200dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/middle_level"
            android:textColor="@color/red"
            android:gravity="center"
            android:textSize="35dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/attentionMiddle"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:layout_marginTop="400dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/hard_level"
            android:textColor="@color/red"
            android:gravity="center"
            android:textSize="35dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/attentionHard"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_marginTop="570dp">
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/understand"
            android:id="@+id/understand1"
            android:layout_gravity="center"
            android:background="@color/red"
            />
    </LinearLayout>

</FrameLayout>