<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rules_Fragment"
    android:background="@color/black"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="250dp"
        android:orientation="vertical">
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/math"
            android:background="@color/yellow"
            android:id="@+id/instMath"
            android:layout_gravity="center"
            android:textSize="25dp"/>
        <Button
            android:layout_width="200dp"
            android:layout_marginTop="60dp"
            android:layout_height="50dp"
            android:text="@string/attention"
            android:background="@color/yellow"
            android:id="@+id/instAttention"
            android:layout_gravity="center"
            android:textSize="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_marginTop="550dp">
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/comeback"
            android:id="@+id/comebackRules"
            android:background="@color/yellow"
            android:textSize="25dp"
            android:layout_gravity="center"/>
    </LinearLayout>








</FrameLayout>